Estructura Models/controllers

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://localhost:27017/mi_basededatos
-PORT=3000
+MONGO_URI="mongodb+srv://jgarzon18164:123456789Qwe.@cluster0.oy9lwsu.mongodb.net/"
+PORT=5000
