Creación de login y arreglo mongo

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI="mongodb+srv://jgarzon18164:123456789Qwe.@cluster0.oy9lwsu.mongodb.net/"
+MONGO_URI="mongodb+srv://jgarzon18164:alejo18164.@cluster0.oy9lwsu.mongodb.net/"
 PORT=3000
